Add link to JMES plugin

--- a/content/post/smt11_filter.adoc
+++ b/content/post/smt11_filter.adoc
@@ -220,6 +220,10 @@ curl -i -X PUT -H "Accept:application/json" \
       }'
 ----
 
+== Filtering records based on the contents of its key or value with the JMES Predicate plugin
+
+There's a really useful predicate plugin that you can use which is based on JMES. You can read more about it https://forum.confluent.io/t/kafka-connect-jmespath-expressive-content-based-record-filtering/1104[in this posting] on the Confluent Community Forum from the author of the plugin. 
+
 == Filtering based on the contents of a message
 
 Confluent Platform includes its own https://docs.confluent.io/platform/current/connect/transforms/filter-confluent.html[`Filter`] Single Message Transform. Instead of being intended for use in combination with a `predicate` (as the `org.apache.kafka.connect.transforms.Filter` transform is), the one in Confluent Platform uses https://github.com/json-path/JsonPath[JSON path] to specify a predicate based on the data in the message itself. 
