--- a/content/post/kafkaconnect-hashmap-struct.adoc
+++ b/content/post/kafkaconnect-hashmap-struct.adoc
@@ -3,6 +3,8 @@ title: "Kafka Connect and Schemas"
 date: 2020-01-22T00:26:03Z
 image: "/images/2020/01/IMG_2257.jpeg"
 thumbnail: "/images/2020/01/IMG_2266.jpeg"
+aliases:
+    - "/2020/01/22/kafka-connect-classcastexception/"
 categories:
 - Kafka Connect
 - Converters
