add pb and json schema note

--- a/content/post/kafkaconnect-hashmap-struct.adoc
+++ b/content/post/kafkaconnect-hashmap-struct.adoc
@@ -32,9 +32,9 @@ The connector you're using relies on the data having a *declared schema*, and yo
 
 === Schemas? In my data? 
 
-There are currently (January 2020) two ways that this can happen: 
+There are two ways that this can happen: 
 
-* Avro with the Confluent Schema Registry (the best option IMO) 
+* Confluent Schema Registry (the best option IMO) with Avro, Protobuf, or JSON Schema
 * JSON with an embedded schema per message
 ** This is not just JSON that you glance at and can say "yeah I reckon I know the schema", or JSON with your own funky schema definition embedded in your own funky bespoke way. This is JSON that looks like this, with `schema` and `payload` root elements:
 +
