Add more cool SMT to the list

--- a/content/post/smt12_community.adoc
+++ b/content/post/smt12_community.adoc
@@ -21,6 +21,15 @@ Apache Kafka ships with https://kafka.apache.org/documentation/#connect_included
 
 {{< youtube Z7k_6vGRrkc >}}
 
+== Other cool community SMT
+
+Here are some other Single Message Transform that I discovered after making this video, and are well worth a look: 
+
+* https://github.com/hpgrahsl/kafka-connect-transform-kryptonite[`kafka-connect-transform-kryptonite`] - field-level encryption/decryption of records. Uses authenticated encryption with associated data (AEAD) and in particular applies AES in GCM mode.
+* https://github.com/an0r0c/kafka-connect-transform-tojsonstring/[`kafka-connect-transform-tojsonstring`] - takes the entire key or value record and transforms it to a new record which contains exactly one field with a JSON representation of the origin record.
+* https://www.confluent.io/hub/denisw/kafka-connect-jmespath[`kafka-connect-jmespath`] - check record keys or values against a JMESPath query expressions. Can be used to filter records or transform them conditionally.
+* https://github.com/streamthoughts/kafka-connect-transform-grok/[`kafka-connect-transform-grok`] - for parsing unstructured data text into a data `Struct` from the entire key or value using a Grok expression.
+
 == Change the topic case
 
 👉 https://jcustenborder.github.io/kafka-connect-documentation/projects/kafka-connect-transform-common/transformations/ChangeTopicCase.html[Reference]
