--- a/content/post/active-mq-explode.adoc
+++ b/content/post/active-mq-explode.adoc
@@ -1,6 +1,8 @@
 ---
 draft: false
-title: 'Kafka Connect - Handling batches of messages within an ActiveMQ message'
+title: 'Using ksqlDB to process data ingested from ActiveMQ with Kafka Connect'
+aliases:
+    - "/2021/03/19/kafka-connect-handling-batches-of-messages-within-an-activemq-message/"
 date: "2021-03-19T10:30:47Z"
 image: "/images/2021/03/IMG_9119.jpeg"
 thumbnail: "/images/2021/03/IMG_9120.jpeg"
