Reformat code block

--- a/content/post/active-mq-explode.adoc
+++ b/content/post/active-mq-explode.adoc
@@ -213,8 +213,55 @@ kafkacat -b broker:29092 -t CONSTRUCTED_JSON -C -c1 \
 
 [source,javascript]
 ----
-{"root":[{"header":{"msg_type":"0003","source_dev_id":"","user_id":"","original_data_source":"SMART","msg_queue_timestamp":"1616146379000","source_system_id":"TRUST"},"body":{"event_type":"DEPARTURE","gbtt_timestamp":"1616146440000","original_loc_stanox":"","planned_timestamp":"1616146440000","timetable_variation":"2","original_loc_timestamp":"","current_train_id":"","delay_monitoring_point":"true","next_report_run_time":"2","reporting_stanox":"04235","actual_timestamp":"1616146320000","correction_ind":"false","event_source":"AUTOMATIC","train_file_address":null,"platform":" 3","division_code":"20","train_terminated":"false","train_id":"321S321619","offroute_ind":"false","variation_status":"EARLY","train_service_code":"21730001","toc_id":"20","loc_stanox":"04235","auto_expected":"true","direction_ind":"UP","route":"1","planned_event_type":"DEPARTURE","next_report_stanox":"04291","line_ind":""}}]}
+{
+  "root": [
+    {
+      "header": {
+        "msg_type": "0003",
+        "source_dev_id": "",
+        "user_id": "",
+        "original_data_source": "SMART",
+        "msg_queue_timestamp": "1616146379000",
+        "source_system_id": "TRUST"
+      },
+      "body": {
+        "event_type": "DEPARTURE",
+        "gbtt_timestamp": "1616146440000",
+        "original_loc_stanox": "",
+        "planned_timestamp": "1616146440000",
+        "timetable_variation": "2",
+        "original_loc_timestamp": "",
+        "current_train_id": "",
+        "delay_monitoring_point": "true",
+        "next_report_run_time": "2",
+        "reporting_stanox": "04235",
+        "actual_timestamp": "1616146320000",
+        "correction_ind": "false",
+        "event_source": "AUTOMATIC",
+        "train_file_address": null,
+        "platform": " 3",
+        "division_code": "20",
+        "train_terminated": "false",
+        "train_id": "321S321619",
+        "offroute_ind": "false",
+        "variation_status": "EARLY",
+        "train_service_code": "21730001",
+        "toc_id": "20",
+        "loc_stanox": "04235",
+        "auto_expected": "true",
+        "direction_ind": "UP",
+        "route": "1",
+        "planned_event_type": "DEPARTURE",
+        "next_report_stanox": "04291",
+        "line_ind": ""
+      }
+    }
+  ]
+}
 ----
+
+NOTE: NOTE: The actual data is a single line of JSON, but I've expanded it above for readability. 
+
 
 Now we can create a new ksqlDB stream over this data and declare a schema for the actual JSON object. For now we just declare the array and its first-level elements (we can access the rest of it later by parsing the varcar with `EXTRACTJSONFIELD`):
 
