Add twitter thread

--- a/content/post/quick-thoughts-on-not-making-a-crap-slide-deck.adoc
+++ b/content/post/quick-thoughts-on-not-making-a-crap-slide-deck.adoc
@@ -67,8 +67,45 @@ There's this rule of thumb about slides-per-minute, and one slide per minute of 
 
 If I was to put this article into a slide deck (and maybe I should…) I'd put something like: 
 
+image::/images/2021/03/bart.png[The slides are not your talk]
+
 * The slides are not your talk
 * Big Font
 * Less Text
 
 Slides give you a _basis from which to talk_, and give the audience something to _look at_ (*not read*) in between gazing in adoration as they listen to your dulcet tones. 
+
+== Bonus content
+
+_Two years on from writing this original article, I took to Twitter to voice more thoughts on the matter:_
+
+
+++++
+<blockquote class="twitter-tweet" data-dnt="true"><p lang="en" dir="ltr">I&#39;ve been doing this <a href="https://twitter.com/hashtag/DevRel?src=hash&amp;ref_src=twsrc%5Etfw">#DevRel</a> thing as an actual job title for nearly three years now, so does that qualify me to tweet some Pro-tips? Or they&#39;re maybe just tips? 🤔<br>🤷‍♂️ Anyway, here are some things you really should stop doing in your presentation decks. <br>🧵 👇</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909865174249474?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">Your slides are not your talk<br>Your slides are not your talk<br>Your slides are not your talk<br>Your slides are not your talk<br>Your slides are not your talk <a href="https://t.co/YqMYGVMJRN">pic.twitter.com/YqMYGVMJRN</a></p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909869657948171?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">Your slides are a *prop* for the talk that *you* are delivering. <br>If I can just download your slides and imbibe the knowledge you wish to impart from the slides alone, what&#39;s the point of listening to your talk?</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909871532797952?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">By all means, create a version of your slides that can be shared afterwards that flesh out your talk. But please don&#39;t create slides that the audience will be too busy reading to be able to pay attention to you</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909872820420610?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">Your slides will probably be 16:9 and need to be readable at 1280x720 at least - and probably aim for even lower res. That means you need to make the most of your slide space.</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909874154180616?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">Resist the default assumption that you&#39;ve got a header of a couple of hundred pixels for a slide title, and the same for a footer. Maybe you are obligated to include your corp logo, but not always. Does the slide *need* a title, or would it work just as well without?</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909875844554760?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">Be aggressive with what&#39;s allowed on your slide. Every bit of text takes space, and is something for the audience to look at and perhaps be distracted with. Twitter handle on each slide is generally a good idea. The title of your talk, company tagline, etc, probably not.</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909877102841859?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">😏 Do you *really* need an agenda slide? They&#39;re a crutch, just like a bio slide. It gives you a nice comfortable familiar way to warm up your voice, settle your nerves…and bore your audience. Consider instead just *telling* your audience what the agenda is 😱</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909878574993410?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">🖼️Paint a picture, set the scene. 🎣Give them a hook, give them a reason to pay attention (instead of opening a new browser tab obscuring the one in which your talk is invariably being delivered these days)</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909880449851392?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">👤Sure bio slides are nice too, but make sure they&#39;re serving a purpose (such as establishing your credibility to speak about the topic) and not just boring them with your resume 👨‍💼</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909881691410435?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">💡Woke: I built this thing and have good lessons to share with you, that&#39;s why you should be listening to me<br>🥱Broke: I&#39;ve been working in IT for 20 years ergo I must have something to say</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909883406872578?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">🥇 Here&#39;s a great example of drawing the audience in, from <a href="https://twitter.com/nathenharvey?ref_src=twsrc%5Etfw">@nathenharvey</a>: <a href="https://t.co/RdgGx3q9lu">https://t.co/RdgGx3q9lu</a>. 💥BAM💥 straight into it, and you&#39;re hooked. Three and a half minutes later, bio slide and introduction, but already audience is going to be 💯engaged</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909885445259265?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">🥇Another good one (no recording 😞) was <a href="https://twitter.com/recursivecodes?ref_src=twsrc%5Etfw">@recursivecodes</a> at <a href="https://twitter.com/hashtag/KScope19?src=hash&amp;ref_src=twsrc%5Etfw">#KScope19</a> in which he just started chatting about where he lived, and wove in details of what he was building (it was pretty cool: <a href="https://t.co/0ASbR6FmyS">https://t.co/0ASbR6FmyS</a>) and told a great story that engaged the audience from the start</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372909887366250496?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr">bonus tweet - <a href="https://twitter.com/lornajane?ref_src=twsrc%5Etfw">@lornajane</a> reminded me of the very appropriate quotation that can be equally applied to the contents of slides: <br><br>“I apologize for such a long letter - I didn&#39;t have time to write a short one.”</p>&mdash; Robin Moffatt 🍻🏃🥓 (@rmoff) <a href="https://twitter.com/rmoff/status/1372915943383371776?ref_src=twsrc%5Etfw">March 19, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+++++
