Fix typo in json

--- a/content/post/active-mq-explode.adoc
+++ b/content/post/active-mq-explode.adoc
@@ -214,7 +214,7 @@ kafkacat -b broker:29092 -t CONSTRUCTED_JSON -C -c1 \
 [source,javascript]
 ----
 {
-  "root": [
+  "MSG_ARRAY": [
     {
       "header": {
         "msg_type": "0003",
