Remove rogue link

--- a/content/post/ksqldb-local-to-cloud.adoc
+++ b/content/post/ksqldb-local-to-cloud.adoc
@@ -17,7 +17,7 @@ categories:
 
 Using ksqlDB in https://www.confluent.io/confluent-cloud/tryfree?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_ksqldb-local-to-cloud&utm_term=rmoff-devx[Confluent Cloud] makes things a whole bunch easier because now you just get to build apps and streaming pipelines, instead of having to run and manage a bunch of infrastructure yourself. 
 
-Once you've got ksqlDB provisioned on Confluent Cloud you can use the web-based editor to build and run queries. You can also connect to it using the https://docs.ksqldb.io/en/latest/developer-guide/ksqldb-rest-api/?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_ksqldb-local-to-cloud&utm_term=rmoff-devx[REST API] and the [ksqlDB CLI tool]. Here's how. 
+Once you've got ksqlDB provisioned on Confluent Cloud you can use the web-based editor to build and run queries. You can also connect to it using the https://docs.ksqldb.io/en/latest/developer-guide/ksqldb-rest-api/?utm_source=rmoff&utm_medium=blog&utm_campaign=tm.devx_ch.rmoff_ksqldb-local-to-cloud&utm_term=rmoff-devx[REST API] and the ksqlDB CLI tool. Here's how. 
 
 <!--more-->
 
