Add useful tweet from Jason Yee

--- a/content/post/how-to-win-[or-at-least-not-suck]-at-the-conference-abstract-submission-game.adoc
+++ b/content/post/how-to-win-[or-at-least-not-suck]-at-the-conference-abstract-submission-game.adoc
@@ -114,6 +114,12 @@ Compared to this, where the paragraph breaks make it nice and easy to grok:
 +
 image::/images/2020/01/ks01.png[]
 
+--- 
+
+This from https://twitter.com/gitbisect/[Jason Yee] should be emblazoned on every CfP submission page everywhere: 
+
+{{< twitter 1387438457505533960 >}}
+
 == Thoughts? Questions? 
 
 https://twitter.com/rmoff[@ me on Twitter!]
