Fix typo, thanks @recursivecodes!

--- a/content/post/rpi-wifi.adoc
+++ b/content/post/rpi-wifi.adoc
@@ -251,7 +251,7 @@ sudo tshark -i mon0 \
 
 A few notes about what's going on here. We've added in a bunch more fields from the Wi-Fi payload to capture in `tshark`. We're also specifying `-P` to tell `kafkacat` to act as producer, `-t` to specify the topic, and `-T` to echo the messages to stdout as well as write them to the topic (just like `tee` does). 
 
-With this running you'll see the messages arriving in the topic, either through `kafkacat` run as a producer: 
+With this running you'll see the messages arriving in the topic, either through `kafkacat` run as a consumer: 
 
 {{< highlight shell >}}
 $ kafkacat -X security.protocol=SASL_SSL -X sasl.mechanisms=PLAIN -X api.version.request=true \
