--- a/content/post/my-workstation-2020.adoc
+++ b/content/post/my-workstation-2020.adoc
@@ -42,13 +42,4 @@ image::/images/2020/10/IMG_6653.jpeg[]
 
 == Software
 
-* https://www.macbartender.com/[Bartender 3]
-** Nice tool for arranging as well as hiding all the menu bar icons - handy when you're presenting from your screen or recording a screencast
-* http://displaymenu.milchimgemuesefach.de/[Display Menu]
-** Great tool for quickly changing display resolution on different monitors
-* https://manytricks.com/moom/[Moom]
-** Excellent utility for using the keyboard to move windows between desktops and resize to pre-configured places
-* https://itunes.apple.com/app/webcam-settings/id533696630?mt=12&at=1l3vngI&ct=blogger[Webcam Settings]
-** Does a better job at keeping the Brio configuration set properly than the Logitech software does
-* https://obsproject.com/[OBS Studio] + https://github.com/johnboiles/obs-mac-virtualcam[Virtual Camera plugin]
-** I'm only dabbling with this and using it as a way to use my greenscreen when presenting on platforms that don't support it
+I wrote a link::/2021/06/22/my-favourite-tools-on-the-mac-setting-up-a-new-mac/[whole article] about this :)
