--- a/content/post/mac-tools.adoc
+++ b/content/post/mac-tools.adoc
@@ -22,11 +22,55 @@ Some of these are unique or best-of-breed, others may have been https://www.econ
 
 <!--more-->
 
-== https://www.alfredapp.com/[Alfred]
+Since writing the draft of this post a month ago I had to put my laptop in for repair, and in getting the loaner machine set up how I wanted it I realised that some of the tools that I originally listed below I could do without. So I've split the list into `essential` and `nice-to-have`.
 
-I've used https://www.alfredapp.com/[Alfred] for years, and it's one of the first apps I'll install on a fresh Mac. It's like the Cmd-Space search integration that MacOS has, but *so much more than that*. I started out with listing a few features here but it soon turned into a [love letter to Alfred] so head there for full details :)
+== Mac Essentials
 
-== https://www.macbartender.com/[Bartender 3]
+=== https://www.alfredapp.com/[Alfred]
+
+I've used https://www.alfredapp.com/[Alfred] for years, and it's one of the first apps I'll install on a fresh Mac. It's like the Cmd-Space search integration that MacOS has, but *so much more than that*. I started out with listing a few features here but it soon turned into a link:/2021/06/22/why-i-use-alfred-app-and-maybe-you-should-too/[love letter to Alfred] so head there for full details :)
+
+=== https://manytricks.com/moom/[Moom]
+
+Excellent utility for using the keyboard to move windows between desktops and resize to pre-configured places. I used to use https://www.irradiatedsoftware.com/sizeup/[SizeUp], this is like that on steroids :) It's worth the learning curve of training muscle memory for repositioning and resizing windows, especially if you have more than one monitor. It's probably the first tool I really missed when I got a new laptop - I was just so used to the ease with which it let me manage and manipulate windows on the desktop. 
+
+=== https://code.visualstudio.com/[VSCode]
+
+My text editor of choice. Nice plugin for asciidoc.
+
+=== https://iterm2.com/[iTerm2]
+
+Nice Terminal replacement. Within my terminal I run `zsh` with https://ohmyz.sh/[`oh-my-zsh`] and `bira` theme. Some important tools to install for a happy life in your shell: 
+
+* brew
+* tldr
+
+=== http://displaymenu.milchimgemuesefach.de/[Display Menu]
+
+Great tool for quickly changing display resolution on different monitors - really handy when doing online talks etc and you want to make sure the screen resolution isn't too tiny for sharing
+
+
+=== https://www.apple.com/uk/keynote/[Keynote]
+
+OMG Keynote! Reason alone for getting the Mac, so that you don't have to use Powerpoint 🤣
+
+I know some people get somewhat evangelical about their software of choice (vi vs emacs, etc), but generally I am happy enough to use whatever's and hand if it's not crap. Which is why I won't use Powerpoint ;-) This is the one thing I won't compromise on. Keynote really is head and shoulders above Powerpoint in usability. I'm not a fan of Google Slides either, FTR. I'll use it if I have to (in preference to Powerpoint) - but I'll complain about it cos it's not Keynote. 
+
+=== https://www.techsmith.com/screen-capture.html[SnagIt]
+
+Very handy tool for taking and marking up static screen captures. See also https://evernote.com/products/skitch[Skitch] (cheaper—free—but less functional).
+
+=== https://getkap.co/[Kap]
+
+Free tool that does a good job of video screencaptures, writing to MP4, animated GIF, etc. Does exactly what it needs to, and nothing else. 
+
+For proper screencap and editing video I use https://www.telestream.net/screenflow/[Screenflow]. https://www.techsmith.com/video-editor.html[Camtasia] is similar tool and equally good.
+
+== "Nice to have" Mac tools
+
+These are ones I've used for ages, but didn't find myself rushing to install when I got a new laptop. 
+
+=== https://www.macbartender.com/[Bartender 3]
 
 After a while your menu bar starts to look like this: 
 
@@ -36,33 +80,22 @@ Bartender is a nice little tool for rearranging the order of the icons, or even 
 
 image::/images/2021/06/menubar2.png[]
 
-== Others
+=== https://bjango.com/mac/istatmenus/[iStatMenus] 
 
-* https://bjango.com/mac/istatmenus/[iStatMenus] — CPU, memory, network, etc usage displayed on your menu bar, with hover-over drill-down visualisations. Neat! 
-+
+CPU, memory, network, etc usage displayed on your menu bar, with hover-over drill-down visualisations. Neat! 
+
 image::/images/2021/06/istat_menus.png[]
 
-* https://www.obdev.at/products/littlesnitch/index.html[Little Snitch] — very powerful way to monitor, and optionally block, specific network traffic for each process on your machine. 
-* https://matthewpalmer.net/rocket/[Rocket] — emojis! 🙌 🙌
-+
+=== https://www.obdev.at/products/littlesnitch/index.html[Little Snitch] 
+
+Very powerful way to monitor, and optionally block, specific network traffic for each process on your machine. 
+
+=== https://matthewpalmer.net/rocket/[Rocket]
+
+emojis! 🙌 🙌
+
 video::/images/2021/06/rocket.mp4[width=400,options="autoplay,loop,nocontrols"]
 
-* SnagIt
-* iTerm2
-* Keynote! OMG Keynote! You can use the best slide creator now 😄 Reason alone for getting the Mac!
-* Screenflow
-* Acorn
-* Kap
+It's neat, but I've replaced it with something almost as quick - within the Mac settings you can remap the *Fn* key to open the system's emoji dialogue: 
 
-* http://displaymenu.milchimgemuesefach.de/[Display Menu] — Great tool for quickly changing display resolution on different monitors - really handy when doing online talks etc and you want to make sure the screen resolution isn't too tiny for sharing
-
-* https://manytricks.com/moom/[Moom] — Excellent utility for using the keyboard to move windows between desktops and resize to pre-configured places. I used to use https://www.irradiatedsoftware.com/sizeup/[SizeUp], this is like that on steroids :) It's worth the learning curve of training muscle memory for repositioning and resizing windows, especially if you have more than one monitor. 
-
-== zsh
-
-
-[source,bash]
-----
-ZSH_THEME="bira"
-plugins=(git docker docker-compose)
-----
+image::/images/2021/07/keyboard01.png[]
